# List

./: .replit  main.py  pyproject.toml  requirements.txt
templates/: index.html
